--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -567,3 +567,6 @@ dd p:first-child {
   font-size: .85em;
   font-style: italic;
 }
+.c2c{
+  background: transparent url(../images/c2c.jpg) 0 0 no-repeat;
+}
